milestone collapse fix

--- a/src/client/sass/_theme.scss
+++ b/src/client/sass/_theme.scss
@@ -219,8 +219,12 @@ ul {
     }
 
     .body {
-        background-color: $white;
-        margin: 0px 5px;
+        background-color: $teal-dark;
+
+        .btn-edit, p, textarea {
+            line-height: 1.5em;
+            color: $white;
+        }
     }
 
     .meta {
